PR 48384: reorganize struct ieee_ext for sparc64 to only use a high/low part for the mantissa. Adjust arch specific code accordingly.